# navigation

./: .gitignore  CMakeLists.txt  DetourNavMeshQuery.cpp  Makefile  PIGlobalType.h  README.md  Recast.h  build.sh  navigation.cpp  navigation.h  navigation.sln  navigation.vcxproj  navigation.vcxproj.filters  navigation_grid_handle.cpp  navigation_grid_handle.h  navigation_handle.cpp  navigation_handle.h  navigation_mesh_handle.cpp  navigation_mesh_handle.h  navmesh_baker.cpp  navmesh_baker.h
depend/common/: CMakeLists.txt  Vector3D.h  common.cpp  common.h  common.vcxproj  common.vcxproj.filters  deadline.h  kbekey.h  kbemalloc.h  kbeversion.cpp  kbeversion.h  memorystream.cpp  memorystream.h  memorystream_converter.h  objectpool.h  platform.h  rsa.cpp  rsa.h  singleton.h  smartpointer.h  stdfindif_handers.h  stringconv.h  strutil.cpp  strutil.h  task.h  tasks.h  timer.cpp  timer.h  timer.inl  timestamp.cpp  timestamp.h
depend/g3dlite/: Makefile  Vector3.cpp
depend/g3dlite/G3D/: Array.h  Table.h  Vector3.h  Vector3.inl  platform.h
depend/math/: CMakeLists.txt  lmath.h  math.vcxproj  math.vcxproj.filters
depend/resmgr/: CMakeLists.txt  resmgr.cpp  resmgr.h  resmgr.vcxproj  resmgr.vcxproj.filters  resourceobject.cpp  resourceobject.h
docs/: build.md  navigation_async_design.md  project_modules.md
output_101_navmesh/: 101_client_blue_path.txt  101_nav_path.txt  101_server_red_path.txt  101_web_like.navmesh
test/: navigation_load_by_name_demo.cpp
tools/: README.md  grid_map_demo.cpp  navmesh_bake_from_obj.cpp  navmesh_dump.cpp  navmesh_export_json.cpp  navmesh_export_obj.cpp  navmesh_path_compare.cpp  navmesh_perf_bench.cpp  navmesh_query_demo.cpp  navmesh_smooth_path_demo.cpp  navmesh_triangle_path_demo.cpp
