PROJECT(math)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6) 
INCLUDE_DIRECTORIES( ../ )
INCLUDE_DIRECTORIES( ../g3dlite )
INCLUDE_DIRECTORIES( .. )
INCLUDE_DIRECTORIES( . )
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
SET(CMAKE_BUILD_TYPE Release)
SET(LIBRARY_OUTPUT_PATH ../../../../Bin/lib)
#SET_TARGET_PROPERTIES(math PROPERTIES CLEAN_DIRECT_OUTPUT 1)
#SET_TARGET_PROPERTIES(math PROPERTIES CLEAN_DIRECT_OUTPUT 1)
add_definitions(-g)
IF(WIN32)
    add_library( math STATIC ${DIR_SRCS})
ELSE()
    add_library( math SHARED ${DIR_SRCS})   
ENDIF()
