cmake_minimum_required(VERSION 3.28)
PROJECT(math)
INCLUDE_DIRECTORIES( ../ )
INCLUDE_DIRECTORIES( ../g3dlite )
INCLUDE_DIRECTORIES( .. )
INCLUDE_DIRECTORIES( . )
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
SET(CMAKE_BUILD_TYPE Release)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_LIST_DIR}/../../Bin/lib)
#SET_TARGET_PROPERTIES(math PROPERTIES CLEAN_DIRECT_OUTPUT 1)
#SET_TARGET_PROPERTIES(math PROPERTIES CLEAN_DIRECT_OUTPUT 1)
add_definitions(-g)
IF(WIN32)
    add_library( math STATIC ${DIR_SRCS})
ELSE()
    add_library( math SHARED ${DIR_SRCS})   
ENDIF()
