PROJECT(resmgr)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6) 
INCLUDE_DIRECTORIES( ../ )
INCLUDE_DIRECTORIES( .. )
INCLUDE_DIRECTORIES( . )
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
SET(CMAKE_BUILD_TYPE Release)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_LIST_DIR}/../../Bin/lib)
#SET_TARGET_PROPERTIES(resmgr PROPERTIES CLEAN_DIRECT_OUTPUT 1)
#SET_TARGET_PROPERTIES(resmgr PROPERTIES CLEAN_DIRECT_OUTPUT 1)
add_definitions(-g)
IF(WIN32)
    add_library( resmgr STATIC ${DIR_SRCS})
ELSE()
    add_library( resmgr SHARED ${DIR_SRCS})   
ENDIF()
